third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/leading-point-neg.stderr
TOML parse error at line 1, column 22
  |
1 | leading-point-neg = -.12345
  |                      ^
invalid integer
